--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,7 +4,7 @@
 # - elf2uf2-rs loads firmware over USB when the rp2040 is in boot mode
 # runner = "probe-rs run --chip RP2040 --protocol swd"
 # runner = "elf2uf2-rs -d"
-runner = "probe-rs run --chip RP2040 --protocol swd"
+runner = "picotool load --update --verify --execute -t elf"
 linker = "flip-link"
 rustflags = [
   "-C", "link-arg=--nmagic",
