--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,7 +8,11 @@ publish = false
 rstest = "0.26.1"
 tracing = "0.1.41"
 test-log = { version = "0.2", features = ["trace"] }
+embedded-graphics = "0.7.0"
+embedded-graphics-simulator = "0.3.0"
+pico-display = { path = "../crates/pico-display" }
 
 [[test]]
 name = "test-dice"
 path = "test_dice.rs"
+
