--- a/crates/pico-display/Cargo.toml
+++ b/crates/pico-display/Cargo.toml
@@ -6,3 +6,4 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 embedded-graphics = "0.7.0"
+num-traits = { version = "0.2.19", default-features = false }
