--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [dev-dependencies]
+lazy_static = "1.5.0"
 rstest = "0.26.1"
 tracing = "0.1.41"
 test-log = { version = "0.2", features = ["trace"] }
