--- a/crates/pico-display/Cargo.toml
+++ b/crates/pico-display/Cargo.toml
@@ -8,3 +8,4 @@ license = "MIT OR Apache-2.0"
 embedded-graphics = "0.7.0"
 num-traits = { version = "0.2.19", default-features = false }
 rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
+trait-set = "0.3.0"
