--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ panic-probe = { version = "1", features = ["print-defmt"] }
 rp-pico = "0.9"
 ssd1306 = "0.10.0"
 
+pico-display = { path = "./crates/pico-display" }
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.8"
