--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rp-pico = "0.9"
 ssd1306 = "0.10.0"
 
 pico-display = { path = "./crates/pico-display" }
+embedded-graphics = "0.8.1"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.8"
