roll dice takes a small rng as a parameter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ ssd1306 = "0.10.0"
 
 pico-display = { path = "./crates/pico-display" }
 embedded-graphics = "0.8.1"
+rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.8"
