--- a/crates/pico-display/Cargo.toml
+++ b/crates/pico-display/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-embedded-graphics = "0.8.1"
+embedded-graphics = { workspace = true }
+rand = { workspace = true }
 num-traits = { version = "0.2.19", default-features = false }
-rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
 trait-set = "0.3.0"
