--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -9,9 +9,9 @@ lazy_static = "1.5.0"
 rstest = "0.26.1"
 tracing = "0.1.41"
 test-log = { version = "0.2", features = ["trace"] }
-embedded-graphics = "0.8.1"
+embedded-graphics = { workspace = true }
 embedded-graphics-simulator = "0.7.0"
-rand = "0.9.2"
+rand = { workspace = true, default-features = true }
 pico-display = { path = "../crates/pico-display" }
 
 
