--- a/crates/pico-display/Cargo.toml
+++ b/crates/pico-display/Cargo.toml
@@ -9,3 +9,4 @@ embedded-graphics = { workspace = true }
 rand = { workspace = true }
 num-traits = { version = "0.2.19", default-features = false }
 trait-set = "0.3.0"
+cortex-m = "0.7"
