--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -13,6 +13,7 @@ embedded-graphics = { workspace = true }
 embedded-graphics-simulator = "0.7.0"
 rand = { workspace = true, default-features = true }
 pico-display = { path = "../crates/pico-display" }
+game-logic = { path = "../crates/game-logic" }
 
 
 [[test]]
