--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,12 @@ embedded-alloc = "0.6.0"
 critical-section = "1.2.0"
 u8g2-fonts = "0.7.2"
 
+# embassy-embedded-hal = { version = "0.5.0", path = "../../embassy-embedded-hal", features = ["defmt"] }
+embassy-sync = { version = "0.7.2", features = ["defmt"] }
+embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
+embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
+
 [workspace.dependencies]
 embedded-graphics = "0.8.1"
 num-traits = { version = "0.2.19", default-features = false }
