--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ embassy-sync = { version = "0.7.2", features = ["defmt"] }
 embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "rt"] }
+static_cell = "2.1.1"
+portable-atomic = { version = "1.0", features = ["critical-section"] }
 
 [workspace.dependencies]
 embedded-graphics = "0.8.1"
