actually use asynchronous writes to the display

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-dri
 panic-probe = { version = "1", features = ["print-defmt"] }
 portable-atomic = { version = "1.11.1", features = ["critical-section"] }
 rand = { workspace = true }
-ssd1306 = "0.10.0"
+ssd1306 = { version = "0.10.0", features = ["async"] }
 static_cell = "2.1.1"
 u8g2-fonts = { workspace = true }
 
