handle blinking by waiting for the first future to complete

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ embedded-alloc = "0.6.0"
 embedded-graphics = { workspace = true }
 embassy-sync = { version = "0.7.2", features = ["defmt"] }
 embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
+embassy-futures = "0.1.2"
 embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "rt"] }
 panic-probe = { version = "1", features = ["print-defmt"] }
