centralize common logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ignored = ["portable-atomic"]
 cortex-m-rt = "0.7"
 defmt = "1"
 defmt-rtt = "1"
+display-interface = "0.5.0"
 embedded-alloc = "0.6.0"
 embedded-graphics = { workspace = true }
 embassy-sync = { version = "0.7.2", features = ["defmt"] }
