--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT OR Apache-2.0"
 ignored = ["portable-atomic"]
 
 [dependencies]
-am2320 = "0.2.0"
+am2320 = { version = "0.2.0", optional = true }
 cortex-m-rt = "0.7"
 defmt = "1"
 defmt-rtt = "1"
@@ -93,4 +93,4 @@ lto = 'fat'
 opt-level = 3
 
 [features]
-temperature = []
+temperature = ["am2320"]
