--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ license = "MIT OR Apache-2.0"
 ignored = ["portable-atomic"]
 
 [dependencies]
-am2320 = { version = "0.2.0", optional = true }
 cortex-m-rt = "0.7"
 defmt = "1"
 defmt-rtt = "1"
+embassy-dht-sensor = { version = "0.2.7", default_features = false, features = ["rp2040", "dht2x", "rp_no_pio"], optional = true }
 display-interface = "0.5.0"
 embedded-alloc = "0.6.0"
 embedded-graphics = { workspace = true }
@@ -93,4 +93,4 @@ lto = 'fat'
 opt-level = 3
 
 [features]
-temperature = ["am2320"]
+temperature = ["embassy-dht-sensor"]
