CI checks extended

--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -33,6 +33,7 @@ jobs:
       - run: cargo install flip-link
       - run: cargo build --all
       - run: cargo build --all --release
+      - run: cargo build --all --release --features temperature
   linting:
     name: Linting
     runs-on: ubuntu-latest
@@ -44,7 +45,8 @@ jobs:
         with:
           components: clippy
           target: thumbv6m-none-eabi
-      - run: cargo clippy --all-features -- --deny=warnings
+      - run: cargo clippy --all -- --deny=warnings
+      - run: cargo clippy --all --features temperature -- --deny=warnings
   formatting:
     name: Formatting
     runs-on: ubuntu-latest
