--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,16 +14,31 @@ ignored = ["portable-atomic"]
 cortex-m-rt = "0.7"
 defmt = "1"
 defmt-rtt = "1"
-embassy-dht-sensor = { version = "0.2.7", optional = true }
 display-interface = "0.5.0"
+embassy-dht-sensor = { version = "0.2.7", optional = true }
+embassy-executor = { version = "0.9.1", features = [
+  "arch-cortex-m",
+  "executor-thread",
+  "executor-interrupt",
+  "defmt",
+] }
+embassy-futures = "0.1.2"
+embassy-rp = { version = "0.8.0", features = [
+  "defmt",
+  "unstable-pac",
+  "time-driver",
+  "critical-section-impl",
+  "rp2040",
+  "rt",
+] }
+embassy-sync = { version = "0.7.2", features = ["defmt"] }
+embassy-time = { version = "0.5.0", features = [
+  "defmt",
+  "defmt-timestamp-uptime",
+] }
 embedded-alloc = "0.6.0"
 embedded-graphics = { workspace = true }
 embedded-graphics-framebuf = "0.5.0"
-embassy-sync = { version = "0.7.2", features = ["defmt"] }
-embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
-embassy-futures = "0.1.2"
-embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
-embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "rt"] }
 panic-probe = { version = "1", features = ["print-defmt"] }
 portable-atomic = { version = "1.11.1", features = ["critical-section"] }
 rand = { workspace = true }
